GNU mailutils NEWS -- history of user-visible changes. 2013-03-21
Copyright (C) 2002-2013 Free Software Foundation, Inc.
See the end of file for copying conditions.

Please send mailutils bug reports to <bug-mailutils@gnu.org>.


Version 2.99.98 (Git)

This version is a major rewrite of GNU Mailutils.  Quite a few parts
of the basic framework were rewritten from scratch, while some others
undergone a considerable revamping.  The user documentation, at the
moment, is insufficient, and in some aspects even scarce.  It is being
worked upon.  However, most of the utilities self-document themselves.  
To obtain a summary of available configuration statements for a given
program, run `program --config-help'.  For additional documentation,
please refer to <http://mailutils.org/wiki>.  If the piece of
documentation you are looking for is not available there, don't
hesitate to post your questions to <bug-mailutils@gnu.org>.

Due to the global nature of these changes, the rewrite of some parts
of the package is not yet finished, while some others are considered
experimental.  Not currently implemented are:

 - nntp client
 
Experimental features are:

 - C++ bindings

The discussion below lists the changes in this release.  It is divided
in three major sections, each addressing a particular audience.  The
section entitles "Important changes" is of particular interest to
users.  This is perhaps the most visible part of this release.  The
section "Configuration changes" addresses package installers.  It
discusses the changes in configure script and related things.
Finally, the section "Changes to the library" is of interest to
programmers which use or wish to use Mailutils in their projects.
 
* Important changes

** IPv6 support.

The core library as well as client and server utilities support
AF_INET6 family of addresses.

** Support for POP3S and IMAP4S in the respective servers.

A single instance of pop3d is able to handle several subservers,