@@ -33,6 +33,7 @@ repl
 rmf
 rmm
 scan
+show
 send
 sortm
 whatnow
