@@ -135,6 +135,7 @@ enum mh_arg {
   ARG_NORMALIZE,          
   ARG_NOSERIALONLY,	
   ARG_NOSHOW,		
+  ARG_NOSHOWPROC,
   ARG_NOSTORE,		
   ARG_NOT,		
   ARG_NOTEXTFIELD,	
@@ -168,6 +169,7 @@ enum mh_arg {
   ARG_SEQUENCE,		
   ARG_SERIALONLY,		
   ARG_SHOW,		
+  ARG_SHOWPROC,
   ARG_SOURCE,		
   ARG_SPLIT,		
   ARG_STORE,		
