@@ -22,7 +22,7 @@ static char *
 private_sequence_name (const char *name)
 {
   char *p;
-  char *mbox_dir = mh_expand_name (NULL, mh_current_folder (), 0);
+  char *mbox_dir = mh_expand_name (NULL, mh_current_folder (), NAME_ANY);
   mu_asprintf (&p, "atr-%s-%s", name, mbox_dir);
   free (mbox_dir);
   return p;
